--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "vue": "^2.5.8"
+    "vue": "^2.5.9"
   },
   "dependencies": {
     "admin-lte": "^2.3.11",
+    "vue-template-compiler": "^2.5.9",
     "vuex": "^3.0.1"
   }
 }
